--- a/index.html
+++ b/index.html
@@ -1,5 +1,44 @@
-<div style="margin-top: 11%;" class="server-message">
-    <h1 style="font-size: 85px;margin: 0;font-weight: 300;    line-height: 1.1;color:grey;text-align: center;">CyberPanel Installed</h1>
-    <h2 style="margin-top: 2%;margin-bottom: 2%;font-weight: 300;    line-height: 1.1;color: #a56565;;text-align: center;">You have successfully installed CyberPanel, Your VPS is Ready, please remove this page and upload your website. :)</h2>
-    <p style="font-size: 35px;margin: 1%;font-weight: 300;    line-height: 1.1;color:grey;text-align: center;"><a href="http://cyberpanel.net">CyberPanel</a>  <a href="http://forums.cyberpanel.net">Forums</a> <a href="http://docs.cyberpanel.net">Documentation</a></p>
-</div>
+<!DOCTYPE html>
+<html style="height:100%">
+<head><title>Website is Online
+</title>
+
+<!--- Proudly Hosted by OrangeHost.com
+
+          ~?JYYY7                                                                                                                                     
+         :????7~.                                                                                                                                     
+      .:::::.                                                                                    .           ..                                       
+   ^!?YYYYYYJ?!^                                                                                :~^         .^^.                               ::.    
+ :?YYJ7~^:^~7JYY?:   .:.  .::     .:::..  .:.   :.   .:::.         .:::..  .:.      .::::.      :~^         .^~.      .....         ......     ^~.    
+^YYY7.       .7YYY^ .JY7^?JYJ. .!?YYYYYJ7~JY~  ^YY~~JYYYYYJ!    .!?YYYYYJ7~JY!   :!JYYYYYJ?~.   :~^          ^^.   .^^^:::^^^.   .:^^::::^^.   ^~^^^^^
+?YYJ.         .JYY7 .JYYY7^:. ^JYY7^:.:!JYYY!  ^YYYY!:..^JYY7  ^JYY7^:.:!JYYY!  !YYJ~:..:7YYJ:  :~^::::::::::^^.  :~^.     .:~^  :~^           ^~:    
+?YYJ.         .JYY7 .JYY7    .JYY!      :YYY!  ^YYY^     ~YYJ..JYY!      :YYY! :YYY?!777!7YYY?  :~^.........:^^. :~^         ^~: .:^^^^:::.    ^~.    
+:JYY?:       :?YYJ: .JYY~    .JYY7      ^YYY!  ^YYY:     ~YYJ. JYY7      ^YYY! :YYY?~~~~~~~~~~  :~^          ^^. .~^         ^~:    ....::^^:  ^~.    
+ :7YYY?!~^~!?YYY7:  .JYY~     :JYY?~^:^7YYYY!  ^YYY:     ~YYJ. :JYY?~^:^7YYYY!  ~YYY7^:::^~~    :~^         .^~.  :~^.     .^~:   .       :~^  ^~:    
+   :~7JYYYYYJ7~:    .?JJ~      .~7JYYYJ?!^JJ~  :JJJ:     ~JJ?.  .~7JYYYJ?!JYY!   .~?JYYYYJJ?.   :^^         .^^.   .:^^^^^^^:.    :^^^^^^^^:   .^^^^^:
+       .....         ...          .....   ..    ...       ...       ...  ^YYY^       .....                             ...            ...         ..  
+                                                                 7?!!~~!?YYJ~                                                                         
+                                                                 !??JJJJ?!^.                                                                          
+
+--->
+
+</head>
+
+<style> @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap'); </style>
+
+<body style="color: #ffffff; margin:0;font: normal 14px/20px 'Roboto', sans-serif; height:100%; background-color: #242424;">
+	<script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script> 
+
+
+<div style="height:auto; min-height:100%; ">    
+	
+	 <div style="text-align: center; width:800px; margin-left: -400px;position:absolute; top: 20%; left:50%;">
+		 
+		 <center><lottie-player src="https://lottie.host/9cb93fe9-b554-4b4c-bd47-53e1f44b6cb6/FIHye6Zzk5.json" background="transparent" speed="0.5" style="width: 600px; height: 300px;" autoplay></lottie-player></center>
+
+	
+        <h1 style="margin:0; font-size:30px; line-height:0px;">Your website is now online!</h1>
+        
+</div></div></body>
+</html>
+
